Wrote tests and vignettes

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -1,41 +1,44 @@
 ---
 title: "frite"
-author: "Chris Peralta"
-date: "June 19, 2018"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+##frite
 
-# frite: functions writing functions
+`frite` is a package that provides tools to modify and write functions. It can also aid in code generation or metaprogramming. Or you can just use the diagnostic functions for code refactoring. 
 
-# timed_map <- map %>%
-#   line_insert(1, quote(tic())) %>%
-#   line_insert(15, quote(toc())) %>%
-#   line_assign(4, 'a') %>%
-#   line_insert(after_line = 9999, quote(return(a)))
-#
-# map_timed <- tictocify(map)
-#
-# is.output.same(map(1:1000000, sqrt), timed_map, map_timed)
+* Diagnostic <br>
+    * `tictocify` *returns a nearly identical timed version of its input* <br>
+    * `is.output.same` *performs call on multiple functions and sees if they match* 
+  
+  
+* Modification <br>
+    * `line_assign` *inserts `assign()` into a function* <br>
+    * `line_insert` *inserts code into a function* <br>
+    * `line_remove` *removes code from a function* <br>
+    * `copy_args` *copies the arguments of one function to another* 
+  
+* Helping <br>
+    * `list_body` *converts function body to a list* <br>
+    * `plot_body` *plots `list_body()` so you can inspect the body*
 
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+##Installation
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+You can install `frite` from cran: 
 
-```{r cars}
-summary(cars)
-```
+`install.packages("frite")`
 
-## Including Plots
+Or you can install it from github: 
 
-You can also embed plots, for example:
+`install.packages("devtools")`
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+`devtools::install_github("visuelledata/frite")`
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+See the getting started vignette for more!
+
+
+
