--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Getting started with frite"
-author: "Christopher Peralta"
+author: "By Christopher Peralta"
 date: "Last updated: `r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEncoding{UTF-8}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{rmarkdown::render}
 editor_options: 
   chunk_output_type: console
 ---
@@ -50,6 +50,7 @@ reduce_timed <- tictocify(reduce)
 
 # Now to test it against the original reduce
 reduce_timed(1:100000, sum, .init = 0) 
+
 is.output.same(reduce_timed(1:100000, sum, .init = 0), reduce)
 ```
 
@@ -60,9 +61,13 @@ is.output.same(reduce_timed(1:100000, sum, .init = 0), reduce)
 ```{r modification}
 # Constructing a different version of reduce_timed
 (reduce_timed1 <- line_insert(reduce, after_line = 1, quote(tic())))
+
 (reduce_timed1 <- line_assign(reduce_timed1, line = 3, 'value'))
+
 (reduce_timed1 <- line_insert(reduce_timed1, after_line = 3, quote(toc())))
-(reduce_timed1 <- line_insert(reduce_timed1, after_line = 4, quote(return(value))))
+
+(reduce_timed1 <- line_insert(reduce_timed1, after_line = 4,
+                              quote(return(value))))
 
 is.output.same(reduce_timed(1:100000, sum, .init = 0), reduce_timed1)
 ```
@@ -70,9 +75,11 @@ Note: Everything above can be piped.
 
 These types of can modifications can be difficult to make sequentially, so there are a couple of helper functions to allow you to see what you're doing. 
 
-```{r helping}
+```{r helping, fig.width = 4, fig.height=3}
+plot_body(map)
+
+
 map_hello <- map %>% 
-  plot_body() %>% # Plots body and returns map
   line_insert(after_line = 1, quote(print("Hello!")))
 
 list_body(map_hello)
@@ -80,4 +87,30 @@ list_body(map_hello)
 map_hello(list(1, 2, "b"), is.number)
 ```
 
-You can read more in the reference manual!
+##Recursively building functions
+
+You can use the modification functions to build functions with recursion. A simple example is below. 
+
+```{r recursion}
+spammer <- function() {}
+
+add_print <- function(.f, n) {
+  
+  .f <- line_insert(.f, 1, quote(print("a")))
+  
+  n <- n - 1
+  
+  if (n > 0) return(add_print(.f, n))
+  if (n == 0) return(.f)
+}
+
+add_print(spammer, 5)
+```
+
+If you want to learn more, you can view the reference manual or install `frite` and begin experimenting. 
+<br>
+<br>
+<br>
+
+
+
