Trying out travis

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -1,12 +1,14 @@
 ---
 title: "frite"
-output: md_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 ##frite
+
+[![Travis-CI Build Status](https://travis-ci.org/visuelledata/frite.svg?branch=master)](https://travis-ci.org/visuelledata/frite)
 
 `frite` is a package that provides tools to modify and write functions. It can also aid in code generation or metaprogramming. Or you can just use the diagnostic functions for code refactoring. 
 
