--- a/cran-comments.Rmd
+++ b/cran-comments.Rmd
@@ -1,27 +1,10 @@
 ---
 output: md_document
 ---
+## Test environments
+* R version 3.5.0 (2018-04-23)
+* Platform: x86_64-w64-mingw32/x64 (64-bit)
+* Running under: Windows >= 8 x64 (build 9200)
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## R CMD check results
+There were no ERRORs or WARNINGs. 
