Updated cran-comments.md, minor changes to README and vignettes

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -34,7 +34,7 @@ You can install `frite` from cran:
 
 `install.packages("frite")`
 
-Or you can install it from github: 
+Or you can install the development version from github: 
 
 `install.packages("devtools")`
 
