--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -6,7 +6,7 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Getting started with frite}
   %\VignetteEncoding{UTF-8}
-  %\VignetteEngine{rmarkdown::render}
+  %\VignetteEngine{rmarkdown::html_vignette}
 editor_options: 
   chunk_output_type: console
 ---
