--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -2,7 +2,7 @@
 title: "Getting started with frite"
 author: "By Christopher Peralta"
 date: "Last updated: `r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: html_vignette
 vignette: >
   %\VignetteIndexEntry{Getting started with frite}
   %\VignetteEncoding{UTF-8}
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 )
 
 library(frite)
+library(purrr)
+library(tictoc)
 ```
 ##Introduction
 
@@ -84,7 +86,7 @@ map_hello <- map %>%
 
 list_body(map_hello)
 
-map_hello(list(1, 2, "b"), is.number)
+map_hello(list(1, 2, "b"), assertthat::is.number)
 ```
 
 ##Recursively building functions
