--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -2,11 +2,11 @@
 title: "Getting started with frite"
 author: "By Christopher Peralta"
 date: "Last updated: `r Sys.Date()`"
-output: html_vignette
+output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Getting started with frite}
   %\VignetteEncoding{UTF-8}
-  %\VignetteEngine{rmarkdown::html_vignette}
+  %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
 ---
